--- a/pages/20052.html
+++ b/pages/20052.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -452,7 +452,7 @@ margin-left: 0em;
 
 <h3 id="valuations_on_lattices">Valuations on lattices</h3>
 
-<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> be a <a class="existingWikiWord" href="/nlab/show/lattice">lattice</a> with a bottom element <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>⊥</mo></mrow><annotation encoding="application/x-tex">\bottom</annotation></semantics></math>. A <strong>valuation</strong> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> is a map <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ν</mi><mo>:</mo><mi>L</mi><mo>→</mo><msub><mi>ℝ</mi> <mrow><mo>≥</mo><mn>0</mn></mrow></msub></mrow><annotation encoding="application/x-tex">\nu:L\to\mathbb{R}_{\ge 0}</annotation></semantics></math> with the following properties:</p>
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> be a <a class="existingWikiWord" href="/nlab/show/lattice">lattice</a> with a <a class="existingWikiWord" href="/nlab/show/bottom">bottom</a> element <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>⊥</mo></mrow><annotation encoding="application/x-tex">\bottom</annotation></semantics></math>. A <strong>valuation</strong> or <strong>evaluation</strong> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/map">map</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ν</mi><mo lspace="verythinmathspace">:</mo><mi>L</mi><mo>→</mo><msub><mi>ℝ</mi> <mrow><mo>≥</mo><mn>0</mn></mrow></msub></mrow><annotation encoding="application/x-tex">\nu \colon L\to\mathbb{R}_{\ge 0}</annotation></semantics></math> with the following properties:</p>
 
 <ul>
 <li>
@@ -471,19 +471,19 @@ margin-left: 0em;
 \nu(x) + \nu(y) = \nu(x \vee y) + \nu(x \wedge y) .
 
 </annotation></semantics></math></div>
-<p>The real line can be replaced, depending on the context, by the space of <a class="existingWikiWord" href="/nlab/show/one-sided+real+number">lower reals</a>.</p>
+<p>The <a class="existingWikiWord" href="/nlab/show/real+line">real line</a> can be replaced, depending on the context, by the space of <a class="existingWikiWord" href="/nlab/show/one-sided+real+number">lower reals</a> (see for example <a href="#vmonad">Vickers</a>).</p>
 
-<p>Moreover, we call a valuation <em>continuous</em> if the following property holds, which is an instance of <a class="existingWikiWord" href="/nlab/show/Scott+topology">Scott continuity</a>, as well as of <span class="newWikiWord"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml">
+<p>Moreover, we call a valuation <em>continuous</em> if the following property holds, which is an instance of <a class="existingWikiWord" href="/nlab/show/Scott+topology">Scott continuity</a>, as well as of <a class="existingWikiWord" href="/nlab/show/tau-smoothness"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml">
   <semantics>
     <mrow>
       <mi>τ</mi>
     </mrow>
     <annotation encoding="application/x-tex">\tau</annotation>
   </semantics>
-</math>-smoothness<a href="/nlab/new/tau+smoothness">?</a></span>:</p>
+</math>-smoothness</a>:</p>
 
 <ul>
-<li><em>Continuity</em>: for every directed net <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">{</mo><msub><mi>x</mi> <mi>λ</mi></msub><msub><mo stretchy="false">}</mo> <mrow><mi>λ</mi><mo>∈</mo><mi>Λ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">\{x_\lambda\}_{\lambda\in\Lambda}</annotation></semantics></math> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> admitting a supremum,</li>
+<li><em>Continuity</em>: for every <a class="existingWikiWord" href="/nlab/show/directed+set">directed</a> <a class="existingWikiWord" href="/nlab/show/net">net</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">{</mo><msub><mi>x</mi> <mi>λ</mi></msub><msub><mo stretchy="false">}</mo> <mrow><mi>λ</mi><mo>∈</mo><mi>Λ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">\{x_\lambda\}_{\lambda\in\Lambda}</annotation></semantics></math> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> admitting a supremum,</li>
 </ul>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>ν</mi><mo maxsize="1.2em" minsize="1.2em">(</mo><munder><mi>sup</mi> <mi>λ</mi></munder><msub><mi>x</mi> <mi>λ</mi></msub><mo maxsize="1.2em" minsize="1.2em">)</mo><mo>=</mo><munder><mi>sup</mi> <mi>λ</mi></munder><mi>ν</mi><mo stretchy="false">(</mo><msub><mi>x</mi> <mi>λ</mi></msub><mo stretchy="false">)</mo><mo>.</mo></mrow><annotation encoding="application/x-tex">
 \nu \big( \sup_{\lambda} x_\lambda \big) = \sup_\lambda \nu(x_\lambda) .
@@ -491,7 +491,7 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <h3 id="valuations_on_locales_and_topological_spaces">Valuations on locales and topological spaces</h3>
 
-<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> be a locale. Then a valuation on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> is by definition a valuation on its <a class="existingWikiWord" href="/nlab/show/frame">frame</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒪</mi><mo stretchy="false">(</mo><mi>L</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathcal{O}(L)</annotation></semantics></math>. In particular, a valuation on a topological space is a valuation on the lattice of its open sets.</p>
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> be a <a class="existingWikiWord" href="/nlab/show/locale">locale</a>. Then a valuation on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> is by definition a valuation on its <a class="existingWikiWord" href="/nlab/show/frame">frame</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒪</mi><mo stretchy="false">(</mo><mi>L</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathcal{O}(L)</annotation></semantics></math>. In particular, a valuation on a <a class="existingWikiWord" href="/nlab/show/topological+space">topological space</a> is a valuation on the <a class="existingWikiWord" href="/nlab/show/lattice+of+open+subsets">lattice of its open sets</a>.</p>
 
 <h2 id="examples">Examples</h2>
 
@@ -508,14 +508,14 @@ margin-left: 0em;
     </mrow>
     <annotation encoding="application/x-tex">\sigma</annotation>
   </semantics>
-</math>-algebra</a>. Then the restriction of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math> to the open subsets of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> is a valuation. The valuation is continuous if and only if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>μ</mi></mrow><annotation encoding="application/x-tex">\mu</annotation></semantics></math> is <span class="newWikiWord"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml">
+</math>-algebra</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math>. Then the restriction of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>μ</mi></mrow><annotation encoding="application/x-tex">\mu</annotation></semantics></math> to the open subsets of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> is a valuation. The valuation is continuous if and only if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>μ</mi></mrow><annotation encoding="application/x-tex">\mu</annotation></semantics></math> is <a class="existingWikiWord" href="/nlab/show/tau-smoothness"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml">
   <semantics>
     <mrow>
       <mi>τ</mi>
     </mrow>
     <annotation encoding="application/x-tex">\tau</annotation>
   </semantics>
-</math>-smooth<a href="/nlab/new/tau-smoothness">?</a></span>.</p>
+</math>-smooth</a>.</p>
 
 <h2 id="properties">Properties</h2>
 
@@ -526,8 +526,8 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li>
-<p>Steve Vickers, <em>A monad of valuation locales</em>, <a href="https://www.cs.bham.ac.uk/~sjv/Riesz.pdf">available here</a>.</p>
+<li id="vmonad">
+<p><a class="existingWikiWord" href="/nlab/show/Steve+Vickers">Steve Vickers</a>, <em>A monad of valuation locales</em> (<a href="https://www.cs.bham.ac.uk/~sjv/Riesz.pdf">pdf</a>).</p>
 </li>
 
 <li>
@@ -540,14 +540,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 14, 2019 at 09:57:02.
+  Last revised on January 14, 2019 at 10:53:55.
   See the <a href="https://ncatlab.org/nlab/history/valuation (measure theory)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/valuation+%28measure+theory%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/valuation+%28measure+theory%29/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/valuation+%28measure+theory%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/valuation+%28measure+theory%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/valuation+%28measure+theory%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/valuation+%28measure+theory%29/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/valuation+%28measure+theory%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/valuation+%28measure+theory%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/valuation (measure theory)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
