--- a/pages/20051.html
+++ b/pages/20051.html
@@ -389,7 +389,7 @@ margin-left: 0em;
 </li>
 
 <li id="GK">
-<p><a class="existingWikiWord" href="/nlab/show/David+Gepner">David Gepner</a> and <a class="existingWikiWord" href="/nlab/show/Joachim+Kock">Joachim Kock</a>, <em>Univalence in locally cartesian closed categories</em>, [arxiv:1208.1749)(https://arxiv.org/abs/1208.1749)]</p>
+<p><a class="existingWikiWord" href="/nlab/show/David+Gepner">David Gepner</a> and <a class="existingWikiWord" href="/nlab/show/Joachim+Kock">Joachim Kock</a>, <em>Univalence in locally cartesian closed categories</em>, <a href="https://arxiv.org/abs/1208.1749">arxiv:1208.1749</a></p>
 </li>
 </ul>
 </body></html>
@@ -398,14 +398,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on January 14, 2019 at 03:06:50.
+  Last revised on January 14, 2019 at 13:31:19.
   See the <a href="https://ncatlab.org/nlab/history/semi-left-exact reflection" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/semi-left-exact+reflection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/semi-left-exact+reflection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/semi-left-exact+reflection/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/semi-left-exact+reflection" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/semi-left-exact+reflection" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/semi-left-exact reflection/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
