--- a/pages/4173.html
+++ b/pages/4173.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/1408/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/1408/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,13 @@ margin-left: 0em;
 
 <h4 id="gravity">Gravity</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></strong></p><h2 id="formalism">Formalism</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></strong></p>
+
+<h2 id="formalism">Formalism</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Poincar%C3%A9+Lie+algebra">Poincaré Lie algebra</a></p>
 
@@ -343,7 +349,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="definition">Definition</h2><ul>
+</ul>
+
+<h2 id="definition">Definition</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Einstein-Hilbert+action">Einstein-Hilbert action</a>, <a class="existingWikiWord" href="/nlab/show/Einstein%27s+equations">Einstein's equations</a>, <a class="existingWikiWord" href="/nlab/show/general+relativity">general relativity</a></p>
 
@@ -357,7 +367,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="spacetime_configurations">Spacetime configurations</h2><ul>
+</ul>
+
+<h2 id="spacetime_configurations">Spacetime configurations</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a></p>
 </li>
@@ -379,7 +393,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="properties">Properties</h2><ul>
+</ul>
+
+<h2 id="properties">Properties</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Kaluza-Klein+mechanism">Kaluza-Klein mechanism</a></p>
 </li>
@@ -399,7 +417,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/weak+gravity+conjecture">weak gravity conjecture</a></p>
 </li>
-</ul><h2 id="spacetimes">Spacetimes</h2><ul>
+</ul>
+
+<h2 id="spacetimes">Spacetimes</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/standard+model+of+cosmology">standard model of cosmology</a></p>
 </li>
@@ -407,9 +429,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Minkowski+spacetime">Minkowski spacetime</a></p>
 </li>
-</ul><table><thead><tr><th><strong> </strong></th><th>vanishing </th><th>positive </th></tr></thead><tbody><tr><td style="text-align: left;"><strong>vanishing </strong></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
-<tr><td style="text-align: left;"><strong>positive </strong></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
-</tbody></table><ul>
+</ul>
+
+<table><thead><tr><th><strong><a class="existingWikiWord" href="/nlab/show/black+hole">black hole</a> <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a></strong></th><th>vanishing <a class="existingWikiWord" href="/nlab/show/angular+momentum">angular momentum</a></th><th><a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> <a class="existingWikiWord" href="/nlab/show/angular+momentum">angular momentum</a></th></tr></thead><tbody><tr><td style="text-align: left;"><strong>vanishing <a class="existingWikiWord" href="/nlab/show/charge">charge</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Schwarzschild+spacetime">Schwarzschild spacetime</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Kerr+spacetime">Kerr spacetime</a></td></tr>
+<tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> <a class="existingWikiWord" href="/nlab/show/charge">charge</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Reissner-Nordstrom+spacetime">Reissner-Nordstrom spacetime</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Kerr-Newman+spacetime">Kerr-Newman spacetime</a></td></tr>
+</tbody></table>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/asymptotically+flat+spacetime">asymptotically flat spacetime</a></p>
 </li>
@@ -457,7 +483,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/black+brane">black brane</a></p>
 </li>
-</ul><h2 id="quantum_theory">Quantum theory</h2><ul>
+</ul>
+
+<h2 id="quantum_theory">Quantum theory</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/quantum+gravity">quantum gravity</a></p>
 
@@ -471,11 +501,17 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul></div>
+</ul>
+</div></div>
 
 <h4 id="physics">Physics</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p><h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p>
+
+<h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2>
+
+<ul>
 <li>
 <p><em><a class="existingWikiWord" href="/nlab/show/higher+category+theory+and+physics">(higher) category theory and physics</a></em></p>
 </li>
@@ -487,7 +523,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+and+reviews+in+mathematical+physics">books and reviews</a>, <a class="existingWikiWord" href="/nlab/show/physics+resources">physics resources</a></p>
 </li>
-</ul><hr /><p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p><p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p><ul>
+</ul>
+<hr />
+<p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p>
+
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/mechanics">mechanics</a></strong></p>
 
@@ -1039,16 +1081,24 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Riemann+hypothesis+and+physics">Riemann hypothesis and physics</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/physicscontents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#References">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#References'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>The theory called <em>the theory of general relativity</em> is the <a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical field theory</a> that in <a class="existingWikiWord" href="/nlab/show/physics">physics</a> describes the field of <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>.</p>
@@ -1123,6 +1173,12 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/John+Baez">John Baez</a>, <a href="http://math.ucr.edu/home/baez/gr/gr.html">The General Relativity Tutorial</a></li>
 </ul>
 
+<p>See also</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>Light Rays, Singularities, and All That</em> (<a href="https://arxiv.org/abs/1901.03928">arXiv:1901.03928</a>)</li>
+</ul>
+
 <p>See also the references at <em><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a></em>.</p>
 </body></html>
 
@@ -1130,14 +1186,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 05:02:01.
+  Last revised on January 15, 2019 at 01:51:33.
   See the <a href="https://ncatlab.org/nlab/history/general relativity" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/general+relativity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/general+relativity/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/general+relativity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/general+relativity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/general+relativity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/general+relativity/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/general+relativity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/general+relativity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/general relativity/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
