--- a/pages/5333.html
+++ b/pages/5333.html
@@ -1714,6 +1714,10 @@ margin-left: 0em;
 <li id="CHE18">
 <p>Andrei Constantin, <a class="existingWikiWord" href="/nlab/show/Yang-Hui+He">Yang-Hui He</a>, <a class="existingWikiWord" href="/nlab/show/Andre+Lukas">Andre Lukas</a>, <em>Counting String Theory Standard Models</em> (<a href="https://arxiv.org/abs/1810.00444">arXiv:1810.00444</a>)</p>
 </li>
+
+<li>
+<p>Alon E. Faraggi, Glyn Harries, Benjamin Percival, John Rizos, <em>Towards machine learning in the classification of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub><mo>×</mo><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{Z}_2 \times \mathbb{Z}_2</annotation></semantics></math> orbifold compactifications (<a href="https://arxiv.org/abs/1901.04448">arXiv:1901.04448</a>)</em></p>
+</li>
 </ul>
 
 <p>The resulting database of compactifications is here:</p>
@@ -1943,14 +1947,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  9, 2019 at 07:18:23.
+  Last revised on January 15, 2019 at 01:55:20.
   See the <a href="https://ncatlab.org/nlab/history/heterotic string theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/heterotic+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/heterotic+string+theory/45" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(45 revisions)</span> | <a href="/nlab/show/diff/heterotic+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/heterotic+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/heterotic+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/heterotic+string+theory/46" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(46 revisions)</span> | <a href="/nlab/show/diff/heterotic+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/heterotic+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/heterotic string theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
