--- a/pages/7959.html
+++ b/pages/7959.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4055/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4055/#Item_11" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1464,6 +1464,10 @@ margin-left: 0em;
 <li id="CHE18">
 <p>Andrei Constantin, <a class="existingWikiWord" href="/nlab/show/Yang-Hui+He">Yang-Hui He</a>, <a class="existingWikiWord" href="/nlab/show/Andre+Lukas">Andre Lukas</a>, <em>Counting String Theory Standard Models</em> (<a href="https://arxiv.org/abs/1810.00444">arXiv:1810.00444</a>)</p>
 </li>
+
+<li>
+<p>Alon E. Faraggi, Glyn Harries, Benjamin Percival, John Rizos, <em>Towards machine learning in the classification of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub><mo>×</mo><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{Z}_2 \times \mathbb{Z}_2</annotation></semantics></math> orbifold compactifications (<a href="https://arxiv.org/abs/1901.04448">arXiv:1901.04448</a>)</em></p>
+</li>
 </ul>
 
 <p>The resulting database of compactifications is here:</p>
@@ -1785,14 +1789,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 20, 2018 at 05:24:26.
+  Last revised on January 15, 2019 at 01:54:52.
   See the <a href="https://ncatlab.org/nlab/history/string phenomenology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/string+phenomenology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+phenomenology/54" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(54 revisions)</span> | <a href="/nlab/show/diff/string+phenomenology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+phenomenology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/string+phenomenology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+phenomenology/55" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(55 revisions)</span> | <a href="/nlab/show/diff/string+phenomenology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+phenomenology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/string phenomenology/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
